# Apprentice

./: README.md  build.gradle.kts
src/main/java/agent/: AsyncAgent.java  ReactBrain.java
src/main/java/agent/activity/: Activity.java  ReasoningStep.java
src/main/java/agent/memory/: AgentMemory.java  ToolManual.java
src/main/java/demo/: CollaborativeAgentsDemo.java  WaterHammerDemo.java
src/mcp/: timer-tool2.js  water-hammer.js
src/mcp/mcp_py/: mcp_virtual_bot_cube.py  pyproject.toml
src/mcp/node/: package-lock.json  package.json  shared-counter.js  timer-tool2.js  water-hammer.js
src/test/java/: ActivitySubmissionIntegrationTest.java  AgentTest.java  ArchitectureIntegrationTest.java  CollaborativeActivityTest.java  CollaborativeAgentsTest.java  RobotIntegrationTest.java
